@@ -61,6 +61,7 @@ import org.graalvm.compiler.options.OptionDescriptors;
 
 import com.oracle.svm.core.OS;
 import com.oracle.svm.driver.NativeImage;
+import com.oracle.svm.util.ModuleSupport;
 
 @Mojo(name = "native-image", defaultPhase = LifecyclePhase.PACKAGE)
 public class NativeImageMojo extends AbstractMojo {
@@ -163,7 +164,7 @@ public class NativeImageMojo extends AbstractMojo {
         addClasspath(project.getArtifact());
         String classpathStr = classpath.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator));
 
-        Path nativeImageExecutable = getJavaHome().resolve("bin").resolve(withExeSuffix("native-image"));
+        Path nativeImageExecutable = getMojoJavaHome().resolve("bin").resolve(withExeSuffix("native-image"));
         if (Files.isExecutable(nativeImageExecutable)) {
             String nativeImageExecutableVersion = "Unknown";
             Process versionCheckProcess = null;
@@ -230,6 +231,7 @@ public class NativeImageMojo extends AbstractMojo {
             }
 
             try {
+                ModuleSupport.exportAndOpenAllPackagesToUnnamed("jdk.internal.vm.ci", false);
                 MojoBuildConfiguration config = new MojoBuildConfiguration();
                 getLog().info("WorkingDirectory: " + config.getWorkingDirectory());
                 getLog().info("ImageClasspath: " + classpathStr);
@@ -249,6 +251,8 @@ public class NativeImageMojo extends AbstractMojo {
                 NativeImage.build(config);
             } catch (NativeImage.NativeImageError e) {
                 throw new MojoExecutionException("Error creating native image:", e);
+            } catch (IllegalAccessError e) {
+                throw new MojoExecutionException("Image building on Java 11+ without native-image requires MAVEN_OPTS='--add-exports=java.base/jdk.internal.module=ALL-UNNAMED'");
             }
         }
     }
@@ -298,7 +302,7 @@ public class NativeImageMojo extends AbstractMojo {
         classpath.add(jarFilePath);
     }
 
-    private static Path getJavaHome() {
+    private static Path getMojoJavaHome() {
         return Paths.get(System.getProperty("java.home"));
     }
 
@@ -396,6 +400,11 @@ public class NativeImageMojo extends AbstractMojo {
         }
 
         @Override
+        public Path getJavaHome() {
+            return getMojoJavaHome();
+        }
+
+        @Override
         public Path getJavaExecutable() {
             return getJavaHome().resolve("bin").resolve(withExeSuffix("java"));
         }
@@ -472,6 +481,11 @@ public class NativeImageMojo extends AbstractMojo {
         @Override
         public List<String> getBuildArgs() {
             return NativeImageMojo.this.getBuildArgs();
+        }
+
+        @Override
+        public Path getAgentJAR() {
+           return getSelectedArtifactPaths(svmGroupId, "svm").get(0);
         }
     }
 }
